Topic/k1ch/ Introduce include_permissions query param for `GET /roles` APIs (#126)
* chore: topic/k1ch/ update knex configuration to avoid race condition

* feat: topic/k1ch/ introduce includePermissions query for get/roles API

* chore: bump version to 2.3.0-rc.1

* refactor: k1ch/ refactored view-select-relationships to use knex instead of PG pool

* refactor: k1ch / modify admin-role db layer to use knex instead of PG pool

* chore: k1ch / bump version to 2.3.0-rc.2

* chore: k1ch / ensure seedKeysIfDbIsEmpty does not cause Unhandled Promise Rejection

* feat: k1ch/ introduce clients/client_id/roles?includePermissions=true

* chore: k1ch/ try catch for seedKeysIfDbIsEmpty function

* chore: k1ch/ add test for getPermissionsByRoleKey

* chore: update OAS and the-usher.js

* chore: k1ch/ add more tests for roles?include_permission=true

* chore: minor updates
