# server/src/api_endpoints/roles/role_key.js
@@ -1,11 +1,6 @@
 const createError = require('http-errors')
 const dbAdminRole = require('database/layer/admin-role')
-
-module.exports = {
-  getRole,
-  patchRole,
-  deleteRole
-}
+const dbAdminPermissions = require('database/layer/admin-permission')
 
 /**
  * Usher admin function to get a single Role object
@@ -15,12 +10,16 @@ module.exports = {
  * @param {*} next
  * @returns Role object
  */
-async function getRole (req, res, next) {
+const getRole = async (req, res, next) => {
   const roleKey = req.params.role_key
+  const { include_permissions } = req.query
   try {
     const role = await dbAdminRole.getRole(roleKey)
     if (!role) {
       return next(createError(404, 'Role key not found or no access'))
+    }
+    if (include_permissions === 'true') {
+      role.permissions = await dbAdminPermissions.getPermissionsByRoleKey(role.key)
     }
     res.status(200).send(role)
   } catch (err) {
@@ -35,7 +34,7 @@ async function getRole (req, res, next) {
  * @param {*} res
  * @param {*} next
  */
-async function patchRole (req, res, next) {
+const patchRole = async (req, res, next) => {
   // const roleKey = req.params.role_key
   // try {
   //   const role = await getRole(req, res, next)
@@ -55,7 +54,7 @@ async function patchRole (req, res, next) {
  * @param {*} res
  * @param {*} next
  */
-async function deleteRole (req, res, next) {
+const deleteRole = async (req, res, next) => {
   // const roleKey = req.params.role_key
   // try {
   //   const role = await getRole(req, res, next)
@@ -66,4 +65,10 @@ async function deleteRole (req, res, next) {
   //   }
   //   return next(createError(500, err))
   // }
+}
+
+module.exports = {
+  getRole,
+  patchRole,
+  deleteRole
 }
